# parseed

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  ast_nodes.py  errors.py  lexer.py  parseed.py  parseed_grammar.txt  parser.py  pyproject.toml  test_generator.py  transpiler.py  utils.py
documentation/: ast_nodes.rst  conf.py  generators.rst  how_to_use.rst  index.rst  language.rst  modules.rst
documentation/generators/: make_a_generator.rst
documentation/internal/: modules.rst
examples/: elf.prsd  mbr.prsd  pcap.prsd
exemples/: arp.prsd  pcap.prsd
generators/: __init__.py  python_class.py
generators/test/: full_language.prsd
src/: errors.py  lexer.py  parseed.py  parser.py  utils.py
test/: test_ast.py  test_lexer.py  test_parser.py  test_transpiler.py
